client: Static is now in static instead of root
* Any user had access to the whole repo, including config files (huge vulnerability fixed)

--- a/static/index.html
+++ b/static/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <title>Timelinizator</title>
         <link rel="stylesheet"
-              href="/static/css/app.css">
+              href="/css/app.css">
         </link>
-        <script src="/static/js/vendor.js"
+        <script src="/js/vendor.js"
                 defer>
         </script>
-        <script src="/static/js/app.js"
+        <script src="/js/app.js"
                 defer>
         </script>
     </head>
